--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   </head>
   <body>
-    <a href="https://github.com/utkarshg1/mlproject_regression" class="top-left-link" target="_blank">GitHub Repository Link</a>
-    <h1>Gemstone Price Prediction - Utkarsh Gaikwad</h1>
-    <img src="{{url_for('static', filename='/Image/your_profile_pic.jpg')}}" alt="Your Profile Picture" class="profile">
+    
+    <h1>Gemstone Price Prediction - Team 3</h1>
     <div class="form-box">
     <form action="{{url_for('predict_datapoint')}}" method="POST">
         <div class="form-group">
